--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
   <a class="nav-link active" aria-current="page" href="./pages/carrito.html"></a>
-    
+
 </head>
 
 <!--Navbar y encabezado-->
@@ -52,10 +52,11 @@
       </div>
     </div>
     </div>
-    <div class="shopp"> 
-    <a class="nav-link active" aria-current="page" href="pages/carrito.html"><i class="fa-solid fa-cart-shopping fa-2x1" title="carrito"></i></a>
-    <p class="compra-texto">Compra</p>
-   </div>
+    <div class="shopp">
+      <a class="nav-link active" aria-current="page" href="pages/carrito.html"><i
+          class="fa-solid fa-cart-shopping fa-2x1" title="carrito"></i></a>
+      <p class="compra-texto">Compra</p>
+    </div>
 
   </nav>
 </header>
@@ -108,14 +109,14 @@
             <div class="row row-cols-2">
               <div class="card" style="width: 20rem;">
                 <img class="imgprod" src="./assets/img/productos/verano/camisa mila.jpg" class="card-img-top" alt="...">
-                <div class="card-body" id="1">
+                <div class="card-body">
                   <h5 class="card-title">Camisa Mila</h5>
                   <p class="card-text">$4.500</p>
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href="#" class="btn">Detalles</a>
-                    <a href="" class="btn input agregar-carrito" data-id="1">Agregar al carrito</a>
+                    <a href="./pages/detalles.html?id=1" data-id="1" class="btn">Detalles</a>
+                    <a href="" class="btn input agregar-carrito" data-id="1">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -125,15 +126,15 @@
           <div class="container text-center">
             <div class="row row-cols-2">
               <div class="card" style="width: 20rem;">
-                <img class="imgprod" src="assets/img/productos/verano/short-y-blazer-vertu-jeans-verano-2023.jpg"
+                <img class="imgprod" src="assets/img/productos/verano/short.jpg"
                   class="card-img-top" alt="...">
-                <div class="card-body" id="2">
+                <div class="card-body">
                   <h5 class="card-title">Conjunto Vertu</h5>
                   <p class="card-text">$20.000</p>
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href="#" class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=2" data-id="2" class="btn">Detalles</a>
                     <a href="" class="btn input agregar-carrito" data-id="2">Agregar</a>
                   </div>
                 </div>
@@ -152,7 +153,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=3" data-id="3" class="btn">Detalles</a>
                     <a href="./pages/carrito.html" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -173,7 +174,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=4" data-id="4" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -191,7 +192,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=5"  data-id="5" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -209,7 +210,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=6" data-id="6" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -254,7 +255,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=7" data-id="7" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -272,7 +273,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=8" data-id="8" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -291,7 +292,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=9" data-id="9" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -312,7 +313,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=10" data-id="10" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -330,7 +331,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=11" data-id="11" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -348,7 +349,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=12" data-id="12" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -391,7 +392,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=13" data-id="13" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -409,7 +410,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=14" data-id="14" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -427,7 +428,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=15" data-id="15" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -448,7 +449,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=16" data-id="16" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -466,7 +467,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=17" data-id="17" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -484,7 +485,7 @@
             </div>
             <div class="botones">
               <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
+                <a href="./pages/detalles.html?id=18" data-id="18" class="btn">Detalles</a>
                 <a href="" class="btn">Agregar</a>
               </div>
             </div>
@@ -528,7 +529,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=19" data-id="19" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -546,7 +547,7 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=20" data-id="20" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
                 </div>
@@ -564,73 +565,75 @@
                 </div>
                 <div class="botones">
                   <div class="btn-group">
-                    <a href=" " class="btn">Detalles</a>
+                    <a href="./pages/detalles.html?id=21" data-id="21" class="btn">Detalles</a>
                     <a href="" class="btn">Agregar</a>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="producto2">
+          <div class="container text-center">
+            <div class="row row-cols-2">
+              <div class="card" style="width: 20rem;">
+                <img class="imgprod" src="./assets/img/productos/primavera/Vestido Mara.jpg" class="card-img-top"
+                  alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Vestido Mara</h5>
+                  <p class="card-text">$10.000</p>
+                </div>
+                <div class="botones">
+                  <div class="btn-group">
+                    <a href="./pages/detalles.html?id=22" data-id="22" class="btn">Detalles</a>
+                    <a href="" class="btn" onclick="agregarAlCarrito('Vestido Mara', 10000)">Agregar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container text-center">
+            <div class="row row-cols-2">
+              <div class="card" style="width: 20rem;">
+                <img class="imgprod" src="./assets/img/productos/primavera/conjunto Priscila.jpg" class="card-img-top"
+                  alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Remera Berta</h5>
+                  <p class="card-text">$15.000</p>
+                </div>
+                <div class="botones">
+                  <div class="btn-group">
+                    <a href="./pages/detalles.html?id=23" data-id="23" class="btn">Detalles</a>
+                    <a href="" class="btn">Agregar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="container text-center">
+            <div class="row row-cols-2">
+              <div class="card" style="width: 20rem;">
+                <img class="imgprod" src="./assets/img/productos/primavera/falda Cor.jpg" class="card-img-top"
+                  alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Falda Rocio</h5>
+                  <p class="card-text">$14.000</p>
+                </div>
+                <div class="botones">
+                  <div class="btn-group">
+                    <a href="./pages/detalles.html?id=24" data-id="24" class="btn">Detalles</a>
+                    <a href="" class="btn">Agregar</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
     </div>
-
-    <div class="producto2">
-      <div class="container text-center">
-        <div class="row row-cols-2">
-          <div class="card" style="width: 20rem;">
-            <img class="imgprod" src="./assets/img/productos/primavera/Vestido Mara.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Vestido Mara</h5>
-              <p class="card-text">$10.000</p>
-            </div>
-            <div class="botones">
-              <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
-                <a href="" class="btn" onclick="agregarAlCarrito('Vestido Mara', 10000)">Agregar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container text-center">
-        <div class="row row-cols-2">
-          <div class="card" style="width: 20rem;">
-            <img class="imgprod" src="./assets/img/productos/primavera/conjunto Priscila.jpg" class="card-img-top"
-              alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Remera Berta</h5>
-              <p class="card-text">$15.000</p>
-            </div>
-            <div class="botones">
-              <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container text-center">
-        <div class="row row-cols-2">
-          <div class="card" style="width: 20rem;">
-            <img class="imgprod" src="./assets/img/productos/primavera/falda Cor.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Falda Rocio</h5>
-              <p class="card-text">$14.000</p>
-            </div>
-            <div class="botones">
-              <div class="btn-group">
-                <a href=" " class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  </section>
+    </section>
   </div>
   <div class="casa">
     <a href="#intro" class="btn btn-warning"><i class="fa-brands fa-fort-awesome-alt" button type="button"> Home</i></a>
@@ -639,7 +642,7 @@
   </section>
   <!--termina primavera-->
   <!--termina catalogo-->
- 
+
   <!--footer-->
 
   <footer class="footer">
@@ -649,8 +652,8 @@
       <a href="https://gmail.com" target="_blank" class="btn btn-outline-warning"><i
           class="fa-regular fa-envelope fa-2x1"></i> Contactanos</a>
       <!-- Button trigger modal -->
-      <button target="_blank" class="btn btn-outline-warning"><i class="fa-solid fa-truck-pickup fa-xs" button type="button"
-          data-bs-toggle="modal" data-bs-target="#exampleModal"> EnvioS</i></a></button>
+      <button target="_blank" class="btn btn-outline-warning"><i class="fa-solid fa-truck-pickup fa-xs" button
+          type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"> EnvioS</i></a></button>
     </div>
 
     <!--Usuario y contraseña ventana modal-->
@@ -698,7 +701,7 @@
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="gridCheck">
                   <label class="form-check-label" for="gridCheck">
-                    Registro y Envio 
+                    Registro y Envio
                   </label>
                 </div>
               </div>
@@ -706,9 +709,9 @@
                 <button type="submit" class="btn btn-primary">Ingresar</button>
               </div>
             </form>
+          </div>
         </div>
       </div>
-    </div>
   </footer>
 
 
@@ -719,7 +722,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-    <script src="./scripts/scripts.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
