--- a/index.html
+++ b/index.html
@@ -44,17 +44,14 @@
             </ul>
           </li>
         </ul>
-        <form>
-          <div class="mb-3">
-            <input class="form-control" type="search" placeholder="¿En qué te ayudo?" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
       </div>
     </div>
     </div>
     <div class="shopp">
       <a class="nav-link active" aria-current="page" href="pages/carrito.html"><i
-          class="fa-solid fa-cart-shopping fa-2x1" title="carrito"></i></a>
+          class="fa-solid fa-cart-shopping fa-2x1" title="carrito"></i>
+          <span id="contadorCarrito">0</span>
+      </a>
       <p class="compra-texto">Compra</p>
     </div>
 
@@ -116,7 +113,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=1" data-id="1" class="btn">Detalles</a>
-                    <a href="" class="btn input agregar-carrito" data-id="1">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id="1" data-nombre="Camisa Mila" data-precio="4500">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -135,7 +132,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=2" data-id="2" class="btn">Detalles</a>
-                    <a href="" class="btn input agregar-carrito" data-id="2">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id="2" data-nombre="Conjunto Vertu" data-precio="20000">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -154,7 +151,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=3" data-id="3" class="btn">Detalles</a>
-                    <a href="./pages/carrito.html" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id="3" data-nombre="Conjunto Sonora" data-precio="12000" onclick="agregarAlCarrito(this)">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -175,7 +172,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=4" data-id="4" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -193,7 +190,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=5"  data-id="5" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -211,7 +208,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=6" data-id="6" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -257,7 +254,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=7" data-id="7" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -275,7 +272,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=8" data-id="8" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -294,7 +291,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=9" data-id="9" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -315,7 +312,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=10" data-id="10" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -333,7 +330,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=11" data-id="11" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -351,7 +348,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=12" data-id="12" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -394,7 +391,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=13" data-id="13" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -412,7 +409,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=14" data-id="14" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -430,7 +427,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=15" data-id="15" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -451,7 +448,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=16" data-id="16" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -469,7 +466,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=17" data-id="17" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -487,7 +484,7 @@
             <div class="botones">
               <div class="btn-group">
                 <a href="./pages/detalles.html?id=18" data-id="18" class="btn">Detalles</a>
-                <a href="" class="btn">Agregar</a>
+                <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
               </div>
             </div>
           </div>
@@ -531,7 +528,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=19" data-id="19" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -549,7 +546,7 @@
                 <div class="botones">
                   <div class="btn-group">
                     <a href="./pages/detalles.html?id=20" data-id="20" class="btn">Detalles</a>
-                    <a href="" class="btn">Agregar</a>
+                    <a href="#" class="btn input agregar-carrito" data-id=".." data-nombre=".. " data-precio=" ..">Agregar</a>
                   </div>
                 </div>
               </div>
@@ -723,7 +720,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-  <script src="scripts/script.js"></script>
+  <script src="./scripts/script.js"></script>
+  <script src="./scripts/carrito.js"></script>
+  <script src="./scripts/contador.js"></script>
 </body>
 
 </html>
+
