--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,48 +6,30 @@
   <title>Carrito</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Rajdhani:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/normalize.css">
   <script src="https://kit.fontawesome.com/491df92c49.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+</head>
 <body>
   <h1>Carrito de Compras</h1>
-  <div class="container">
-    <div class="carrito-compras">
-      <h2>Productos en el carrito:</h2>
-      <div id="carritoProductos">
-        <!-- Aquí se mostrarán los productos del carrito -->
-      </div>
-      <div id="totalCompra">
-        <!-- Aquí se mostrará el total de la compra -->
-      </div>
-      <button id="finalizarCompraBtn">Finalizar Compra</button>
-    </div>
+  <div id="carritoProductos">
+    <!-- Aquí se mostrarán los productos del carrito -->
+  </div>
+  <div id="totalCompra">
+    <!-- Aquí se mostrará el total de la compra -->
   </div>
 
 
-
-<!--JavaScript-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
-</script>
-<script src="../scripts/scripts.js"></script>
+  <!--JavaScript-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <script src="../scripts/carrito.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
