--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -12,30 +12,52 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/detalles.css">
     <link rel="stylesheet" href="../assets/css/normalize.css">
     <script src="https://kit.fontawesome.com/491df92c49.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
 </head>
+
+<header> </header>
+<nav class="navbar navbar-expand-lg" style="background-color: #eadf8a;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="../assets/img/logo-stefany.png" alt="..." width="100px" height="100px">
+        </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Volver a</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        TEMPORADA
+                    </a>
+                    <div class="dropdown-menu">
+                        <div><a href="../index.html#verano">VERANO</a></div>
+                        <div><a href="../index.html#otoño">OTOÑO</a></div>
+                        <div><a href="../index.html#invierno">INVIERNO</a></div>
+                        <div><a href="../index.html#primavera">PRIMAVERA</a></div>
+                      </div>
+                </li>
+            </ul>
+           
+        </div>
+    </div>
+</div>
+</nav>
+
+
+
 
 <body>
     <div class="container">
         <h2>Detalles del producto</h2>
         <div id="descripcion"></div>
         <img id="foto" src="" alt="">
-      </div>
 
-
-
-
-
-
-
-
-
-
-
+    </div>
 
 
     <!--JavaScript-->
@@ -43,6 +65,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="../scripts/script.js"></script>
+    <script src="../scripts/carrito.js"></script>
 </body>
 
 </html>
